finally fix photo not stretched fullwidth

--- a/src/assets/scss/components/_section.scss
+++ b/src/assets/scss/components/_section.scss
@@ -127,7 +127,6 @@ section--imagebg - full bg obrazok definovany na section elemente
 
 		&--imagebg {
 			min-height: rem-calc( 480 );
-			background-size: auto;
 		}
 
 		&__title {
